--- a/style.css
+++ b/style.css
@@ -19,8 +19,8 @@ body {
 header {
   background: 
     linear-gradient(rgba(125,60,152,0.9), rgba(125,60,152,0.9)), 
-    url('images/djuikem-academy.svg') center/contain no-repeat;
-  background-color: var(--violet);
+    url('images/djuikem-academy.png') center/contain no-repeat;
+ /* background-color: var(--violet);*/
   color: white;
   padding: 15px 0;
   box-shadow: 0 2px 6px rgba(0,0,0,0.2);
