--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 header {
   background: 
     linear-gradient(rgba(125,60,152,0.9), rgba(125,60,152,0.9)), 
-    url('images/djuikem-academy.png') center/contain no-repeat;
+    url('images/djuikem-academy.png') center/cover no-repeat;
  /* background-color: var(--violet);*/
   color: white;
   padding: 15px 0;
