--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 /* --- Header --- */
 header {
   background: linear-gradient(rgba(125,60,152,0.2), rgba(125,60,152,0.2));
-  background-color: var(--blanc);
+  background-color: var(--violet);
   color: white;
   padding: 15px 0;
   box-shadow: 0 2px 6px rgba(0,0,0,0.2);
